--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.7",
+    "@angular/cdk": "^11.2.6",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.7",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
@@ -40,6 +43,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.2.3"
   }
 }
